# TestTaskCredoDialogue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  compile.sh  main.cpp  settings.json
include/: AbstractSpaceShipFactory.hpp  Army.hpp  Attacked.hpp  Attacker.hpp  BaseException.hpp  GameWorld.hpp  GameWorldObjI.hpp  Opponents.hpp  Preset.hpp  SpaceShipCharacteristics.hpp  SpaceShipI.hpp  Tools.hpp  Writes.hpp  WritterI.hpp
include/DebugTools/: ASSERT.hpp
include/impl/: AllianceSpaceShipI.hpp  BomberI.hpp  CoutWritter.hpp  EmpireSpaceShipI.hpp  FighterI.hpp  FstreamWritter.hpp  ScoutI.hpp  ShuttleI.hpp  TransportI.hpp
include/impl/Alliance/: AllianceBomber.hpp  AllianceFighter.hpp  AllianceScout.hpp  AllianceShuttle.hpp  AllianceSpaceShipFactory.hpp  AllianceTransport.hpp
include/impl/Empire/: EmpireBomber.hpp  EmpireFighter.hpp  EmpireScout.hpp  EmpireShuttle.hpp  EmpireSpaceShipFactory.hpp  EmpireTransport.hpp
src/: AbstractSpaceShipFactory.cpp  Army.cpp  Attacked.cpp  Attacker.cpp  BaseException.cpp  GameWorld.cpp  GameWorldObjI.cpp  Opponents.cpp  Preset.cpp  SpaceShipCharacteristics.cpp  SpaceShipI.cpp  Tools.cpp  Writes.cpp
src/DebugTools/: ASSERT.cpp
src/impl/: AllianceSpaceShipI.cpp  BomberI.cpp  CoutWritter.cpp  EmpireSpaceShipI.cpp  FighterI.cpp  FstreamWritter.cpp  ScoutI.cpp  ShuttleI.cpp  TransportI.cpp
src/impl/Alliance/: AllianceBomber.cpp  AllianceFighter.cpp  AllianceScout.cpp  AllianceShuttle.cpp  AllianceSpaceShipFactory.cpp  AllianceTransport.cpp
src/impl/Empire/: EmpireBomber.cpp  EmpireFighter.cpp  EmpireScout.cpp  (+3 more)
